--- a/buildtools/re2/Dockerfile
+++ b/buildtools/re2/Dockerfile
@@ -49,7 +49,9 @@ RUN $CXX -o libcre2-noopt.so -Wl,--global-base=1024 $LDFLAGS \
     -Wl,--export=cre2_named_groups_iter_new \
     -Wl,--export=cre2_named_groups_iter_next \
     -Wl,--export=cre2_named_groups_iter_delete \
-    -Wl,--export=cre2_global_replace_re
+    -Wl,--export=cre2_global_replace_re \
+    -Wl,--export=pthread_create \
+    -Wl,--export=wasi_start_thread
 
 #RUN wasm-opt -o libcre2.so --low-memory-unused --flatten --rereloop --converge -O3 libcre2-noopt.so
 RUN cp libcre2-noopt.so libcre2.so
